; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/gzip/extr_gzip.c_unlink_input.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/gzip/extr_gzip.c_unlink_input.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stat = type { i64, i64 }

@kflag = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, %struct.stat*)* @unlink_input to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @unlink_input(i8* %0, %struct.stat* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.stat*, align 8
  %5 = alloca %struct.stat, align 8
  store i8* %0, i8** %3, align 8
  store %struct.stat* %1, %struct.stat** %4, align 8
  %6 = load i64, i64* @kflag, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %2
  br label %32

9:                                                ; preds = %2
  %10 = load i8*, i8** %3, align 8
  %11 = call i64 @stat(i8* %10, %struct.stat* %5)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %9
  br label %32

14:                                               ; preds = %9
  %15 = getelementptr inbounds %struct.stat, %struct.stat* %5, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load %struct.stat*, %struct.stat** %4, align 8
  %18 = getelementptr inbounds %struct.stat, %struct.stat* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = icmp ne i64 %16, %19
  br i1 %20, label %28, label %21

21:                                               ; preds = %14
  %22 = getelementptr inbounds %struct.stat, %struct.stat* %5, i32 0, i32 1
  %23 = load i64, i64* %22, align 8
  %24 = load %struct.stat*, %struct.stat** %4, align 8
  %25 = getelementptr inbounds %struct.stat, %struct.stat* %24, i32 0, i32 1
  %26 = load i64, i64* %25, align 8
  %27 = icmp ne i64 %23, %26
  br i1 %27, label %28, label %29

28:                                               ; preds = %21, %14
  br label %32

29:                                               ; preds = %21
  %30 = load i8*, i8** %3, align 8
  %31 = call i32 @unlink(i8* %30)
  br label %32

32:                                               ; preds = %29, %28, %13, %8
  ret void
}

declare dso_local i64 @stat(i8*, %struct.stat*) #1

declare dso_local i32 @unlink(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
